# qt6-demo-app

./: CMakeLists.txt  TheOpenGlWidget.cpp  TheOpenGlWidget.h  main.qml  mainwindow.cpp  window.cpp  window.h
